fix: correct invisible text in wysiwyg editor

--- a/src/components/createPractice/style.css
+++ b/src/components/createPractice/style.css
@@ -203,6 +203,7 @@
   width: 100%;
   background: #FFFFFF;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 0px 0px 1px rgba(104, 113, 130, 0.16);
+  color: black;
   border-radius: 6px;
   border: none;
   min-height: 480px;
